# sitesync

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  pyproject.toml  sitesync.spec
.claude/: ultrareview-loop-ulr-1ac395b1-f550-4833-a9e7-f4fc30ae4a90.local.md
.github/workflows/: ci.yaml  release.yaml
config/: default.yaml
docs/: agents.md  architecture.md
openspec/: project.md
openspec/changes/add-config-onboarding/: design.md  proposal.md  tasks.md
openspec/changes/add-config-onboarding/specs/configuration/: spec.md
openspec/changes/update-build-tooling/: design.md  proposal.md  tasks.md
openspec/changes/update-build-tooling/specs/build-tooling/: spec.md
openspec/changes/update-crawl-domain-filters/: design.md  proposal.md  tasks.md
openspec/changes/update-crawl-domain-filters/specs/crawl-config/: spec.md
openspec/changes/update-crawl-domain-filters/specs/crawl-execution/: spec.md
openspec/changes/update-crawl-reliability/: design.md  proposal.md  tasks.md
openspec/changes/update-crawl-reliability/specs/crawl-executor/: spec.md
openspec/changes/update-crawl-reliability/specs/developer-tooling/: spec.md
openspec/changes/update-crawl-reliability/specs/plugin-registry/: spec.md
openspec/changes/update-crawl-reliability/specs/task-leasing/: spec.md
scripts/: make_quality.sh  make_something
src/sitesync/: __init__.py  __main__.py
src/sitesync/cli/: __init__.py  app.py  data.py  grep.py
src/sitesync/config/: __init__.py  loader.py
src/sitesync/core/: __init__.py  executor.py  orchestrator.py
src/sitesync/fetchers/: __init__.py  http.py  null.py  playwright.py
src/sitesync/logging/: __init__.py  setup.py
src/sitesync/plugins/: __init__.py  base.py  media_asset.py  registry.py  simple_page.py
src/sitesync/reports/: __init__.py  status_report.py
src/sitesync/storage/: __init__.py  db.py
src/sitesync/ui/: __init__.py  dashboard.py  hotkeys.py
tests/: __init__.py  test_config.py  test_executor.py  test_http_fetcher.py  test_logging.py  test_media_plugin.py  test_orchestrator.py  test_plugins.py  test_storage.py
tests/e2e/: test_cli_smoke.py
